--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "~4.13.3",
     "ejs": "~2.3.3",
-    "body-parser": "~1.13.3"
+    "body-parser": "~1.13.3",
+    "sqlite3": "~3.0.10"
   }
 }
