Learning how to validate input with validator. Successfully added some validation/safety to new database entries.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.13.3",
     "ejs": "~2.3.3",
     "body-parser": "~1.13.3",
-    "sqlite3": "~3.0.10"
+    "sqlite3": "~3.0.10",
+    "validator": "~4.0.5"
   }
 }
