--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "ejs": "~2.3.3",
     "body-parser": "~1.13.3",
     "sqlite3": "~3.0.10",
-    "validator": "~4.0.5"
+    "validator": "~4.0.5",
+    "passport": "~0.3.0",
+    "passport-local": "~1.0.0",
+    "cookieparser": "~0.1.0"
   }
 }
